--- a/WC总览一键懒人版（自用，未必适合每个人）.yaml
+++ b/WC总览一键懒人版（自用，未必适合每个人）.yaml
@@ -3323,34 +3323,197 @@ presets:
           - 864
           - 1527
           - 1538
-  - - <color=0xFF66FF66>➲ 额外：跑蛋（!）</color>
+  - - <color=0xFFFFCCFF>✈ 航行（-舰船 +空间站）</color>
     - - - alwaysShownStates
         - []
       - - filteredStates
-        - []
+        - - 11
+          - 12
+          - 14
+          - 15
+          - 16
+          - 21
+          - 45
       - - groups
         - - 6
-          - 7
-          - 8
-          - 9
           - 10
           - 15
-          - 365
+          - 90
+          - 310
+          - 361
+          - 366
+          - 411
+          - 479
+          - 548
+          - 550
+          - 551
+          - 552
+          - 553
+          - 554
+          - 555
+          - 556
+          - 557
+          - 558
+          - 559
+          - 560
+          - 561
+          - 562
+          - 563
+          - 564
+          - 565
+          - 566
+          - 567
+          - 568
+          - 569
+          - 570
+          - 571
+          - 572
+          - 573
+          - 574
+          - 575
+          - 576
+          - 577
+          - 578
+          - 579
+          - 580
+          - 581
+          - 582
+          - 583
+          - 584
+          - 593
+          - 594
+          - 595
+          - 596
+          - 597
+          - 602
+          - 603
+          - 604
+          - 605
+          - 606
+          - 611
+          - 612
+          - 613
+          - 614
+          - 615
+          - 620
+          - 621
+          - 622
+          - 623
+          - 624
+          - 629
+          - 630
+          - 631
+          - 632
+          - 633
+          - 755
+          - 756
+          - 757
+          - 758
+          - 759
+          - 760
+          - 761
+          - 789
+          - 790
+          - 791
+          - 792
+          - 793
+          - 794
+          - 795
+          - 796
+          - 797
+          - 798
+          - 799
+          - 800
+          - 801
+          - 802
+          - 803
+          - 804
+          - 805
+          - 806
+          - 807
+          - 808
+          - 809
+          - 810
+          - 811
+          - 812
+          - 813
+          - 814
+          - 819
+          - 820
+          - 821
+          - 835
+          - 836
+          - 843
+          - 844
+          - 845
+          - 846
+          - 847
+          - 848
+          - 849
+          - 850
+          - 851
+          - 852
+          - 861
+          - 863
+          - 864
+          - 865
+          - 866
+          - 867
+          - 868
+          - 875
+          - 897
+          - 920
           - 925
+          - 959
+          - 960
+          - 961
+          - 982
+          - 983
+          - 984
+          - 985
+          - 986
+          - 987
           - 988
           - 1003
+          - 1005
           - 1012
-          - 1025
-          - 1081
-          - 1082
-          - 1106
+          - 1051
+          - 1052
+          - 1053
+          - 1054
+          - 1056
+          - 1149
+          - 1174
+          - 1249
+          - 1252
+          - 1255
+          - 1259
+          - 1262
+          - 1265
+          - 1288
+          - 1310
+          - 1316
           - 1404
           - 1406
           - 1408
+          - 1530
+          - 1548
           - 1657
+          - 1704
+          - 1915
+          - 1956
+          - 2015
           - 2016
           - 2017
+          - 2020
+          - 4028
+          - 4034
+          - 4035
+          - 4036
+          - 4037
           - 4081
+          - 4088
+          - 4093
   - - <color=0xFFFFFF66>✜ 目标：战列巡洋舰</color>
     - - - filteredStates
         - - 11
@@ -3848,6 +4011,34 @@ presets:
           - 863
           - 864
           - 1534
+  - - <color=0xFF66FF66>➲ 额外：跑蛋（!）</color>
+    - - - alwaysShownStates
+        - []
+      - - filteredStates
+        - []
+      - - groups
+        - - 6
+          - 7
+          - 8
+          - 9
+          - 10
+          - 15
+          - 365
+          - 925
+          - 988
+          - 1003
+          - 1012
+          - 1025
+          - 1081
+          - 1082
+          - 1106
+          - 1404
+          - 1406
+          - 1408
+          - 1657
+          - 2016
+          - 2017
+          - 4081
   - - <color=0xFF33FFFF>☭ 生产：打捞/残骸</color>
     - - - alwaysShownStates
         - []
@@ -5103,20 +5294,6 @@ presets:
           - 4093
           - 4107
           - 4137
-  - - <color=0xFFFFFF66>✜ 目标：大航</color>
-    - - - filteredStates
-        - - 11
-          - 12
-          - 14
-          - 15
-          - 16
-          - 21
-          - 45
-      - - groups
-        - - 90
-          - 659
-          - 863
-          - 864
   - - <color=0xFFFD96CF>※ --- D-Scan：所有</color>
     - - - alwaysShownStates
         - []
@@ -5695,6 +5872,7 @@ presets:
           - 90
           - 324
           - 358
+          - 361
           - 380
           - 381
           - 419
@@ -7051,10 +7229,8 @@ presets:
           - 1534
           - 1548
           - 4088
-  - - <color=0xFFFFCCFF>✈ 航行（-舰船 +空间站）</color>
-    - - - alwaysShownStates
-        - []
-      - - filteredStates
+  - - <color=0xFFFFFF66>✜ 目标：大航</color>
+    - - - filteredStates
         - - 11
           - 12
           - 14
@@ -7063,185 +7239,10 @@ presets:
           - 21
           - 45
       - - groups
-        - - 6
-          - 10
-          - 15
-          - 90
-          - 310
-          - 361
-          - 366
-          - 411
-          - 479
-          - 548
-          - 550
-          - 551
-          - 552
-          - 553
-          - 554
-          - 555
-          - 556
-          - 557
-          - 558
-          - 559
-          - 560
-          - 561
-          - 562
-          - 563
-          - 564
-          - 565
-          - 566
-          - 567
-          - 568
-          - 569
-          - 570
-          - 571
-          - 572
-          - 573
-          - 574
-          - 575
-          - 576
-          - 577
-          - 578
-          - 579
-          - 580
-          - 581
-          - 582
-          - 583
-          - 584
-          - 593
-          - 594
-          - 595
-          - 596
-          - 597
-          - 602
-          - 603
-          - 604
-          - 605
-          - 606
-          - 611
-          - 612
-          - 613
-          - 614
-          - 615
-          - 620
-          - 621
-          - 622
-          - 623
-          - 624
-          - 629
-          - 630
-          - 631
-          - 632
-          - 633
-          - 755
-          - 756
-          - 757
-          - 758
-          - 759
-          - 760
-          - 761
-          - 789
-          - 790
-          - 791
-          - 792
-          - 793
-          - 794
-          - 795
-          - 796
-          - 797
-          - 798
-          - 799
-          - 800
-          - 801
-          - 802
-          - 803
-          - 804
-          - 805
-          - 806
-          - 807
-          - 808
-          - 809
-          - 810
-          - 811
-          - 812
-          - 813
-          - 814
-          - 819
-          - 820
-          - 821
-          - 835
-          - 836
-          - 843
-          - 844
-          - 845
-          - 846
-          - 847
-          - 848
-          - 849
-          - 850
-          - 851
-          - 852
-          - 861
+        - - 90
+          - 659
           - 863
           - 864
-          - 865
-          - 866
-          - 867
-          - 868
-          - 875
-          - 897
-          - 920
-          - 925
-          - 959
-          - 960
-          - 961
-          - 982
-          - 983
-          - 984
-          - 985
-          - 986
-          - 987
-          - 988
-          - 1003
-          - 1005
-          - 1012
-          - 1051
-          - 1052
-          - 1053
-          - 1054
-          - 1056
-          - 1149
-          - 1174
-          - 1249
-          - 1252
-          - 1255
-          - 1259
-          - 1262
-          - 1265
-          - 1288
-          - 1310
-          - 1316
-          - 1404
-          - 1406
-          - 1408
-          - 1530
-          - 1548
-          - 1657
-          - 1704
-          - 1915
-          - 1956
-          - 2015
-          - 2016
-          - 2017
-          - 2020
-          - 4028
-          - 4034
-          - 4035
-          - 4036
-          - 4037
-          - 4081
-          - 4088
-          - 4093
   - - <color=0xFF33FFFF>☭ 生产：入侵</color>
     - - - alwaysShownStates
         - []
@@ -7711,7 +7712,6 @@ presets:
           - 29
           - 30
           - 31
-          - 90
           - 237
           - 324
           - 358
@@ -7720,22 +7720,18 @@ presets:
           - 419
           - 420
           - 463
-          - 479
           - 485
           - 513
           - 540
           - 541
           - 543
           - 547
-          - 548
           - 659
           - 830
           - 831
           - 832
           - 833
           - 834
-          - 863
-          - 864
           - 883
           - 893
           - 894
@@ -7753,11 +7749,8 @@ presets:
           - 1527
           - 1534
           - 1538
-          - 1548
-          - 1704
           - 1972
           - 2001
-          - 4088
   - - <color=0xFFFD96CF>※ D-Scan：收割（-残骸）</color>
     - - - alwaysShownStates
         - []
@@ -9206,7 +9199,6 @@ shipLabelOrder:
   - ship type
   - alliance
   - corporation
-  - linebreak
   - pilot name
   - ship name
   - null
@@ -9236,13 +9228,13 @@ shipLabels:
           - 0.5
           - 1.0
       - - fontsize
-        - 11
+        - 12
       - - post
         - "]"
       - - pre
         - " ["
       - - state
-        - 1
+        - 0
       - - type
         - alliance
   - - corporation
@@ -9251,34 +9243,15 @@ shipLabels:
           - 0.63
           - 0.57
       - - fontsize
-        - 10
+        - 11
       - - post
         - "&gt;"
       - - pre
         - " &lt;"
       - - state
-        - 1
+        - 0
       - - type
         - corporation
-  - - linebreak
-    - - - bold
-        - false
-      - - color
-        - null
-      - - fontsize
-        - null
-      - - italic
-        - false
-      - - post
-        - null
-      - - pre
-        - null
-      - - state
-        - null
-      - - type
-        - linebreak
-      - - underline
-        - false
   - - pilot name
     - - - color
         - - 1.0
@@ -9291,7 +9264,7 @@ shipLabels:
       - - pre
         - " "
       - - state
-        - 1
+        - 0
       - - type
         - pilot name
   - - ship name
@@ -9311,7 +9284,7 @@ shipLabels:
           - 0.914
           - 0.0
       - - fontsize
-        - 11
+        - 14
       - - post
         - ""
       - - pre
@@ -9379,11 +9352,13 @@ tabSetup:
     - - - bracket
         - ⌘ 图标：所有
       - - color
-        - null
+        - - 1.0
+          - 0.25
+          - 0.8125
       - - name
-        - <color=0xFFFF99FF><b><fontsize=13> ✈ </fontsize></b></color>
+        - "ㅤ✈ㅤ"
       - - overview
-        - <color=0xFFFFCCFF>✈ --- 航行：所有</color>
+        - <color=0xFFFFCCFF>✈ 航行（-舰船 +空间站）</color>
       - - tabColumnOrder
         - - ICON
           - TAG
@@ -9403,9 +9378,11 @@ tabSetup:
     - - - bracket
         - ⌘ 图标：所有
       - - color
-        - null
+        - - 1.0
+          - 0.25
+          - 0.25
       - - name
-        - <color=0xFFFF6666><b><fontsize=13> 作战 </fontsize></b></color>
+        - "ㅤ作战ㅤ"
       - - overview
         - <color=0xFFFF6666>✯ --- 作战：所有</color>
       - - tabColumnOrder
@@ -9427,9 +9404,11 @@ tabSetup:
     - - - bracket
         - ⌘ 图标：基本（+无人机 -残骸）
       - - color
-        - null
+        - - 1.0
+          - 1.0
+          - 0.25
       - - name
-        - <color=0xFFFFFF66><b><fontsize=13> 目标 </fontsize></b></color>
+        - "ㅤ目标ㅤ"
       - - overview
         - <color=0xFFFFFF66>✜ 目标：所有旗舰</color>
       - - tabColumnOrder
@@ -9451,9 +9430,11 @@ tabSetup:
     - - - bracket
         - ⌘ 图标：生产
       - - color
-        - null
+        - - 0.25
+          - 1.0
+          - 1.0
       - - name
-        - <color=0xFF33FFFF><b><fontsize=13> 生产 </fontsize></b></color>
+        - "ㅤ生产ㅤ"
       - - overview
         - <color=0xFF33FFFF>☭ 生产：挖矿（月矿）</color>
       - - tabColumnOrder
@@ -9475,9 +9456,11 @@ tabSetup:
     - - - bracket
         - ⌘ 图标：所有
       - - color
-        - null
+        - - 0.25
+          - 0.8125
+          - 1.0
       - - name
-        - <color=0xFF66CCFF><b><fontsize=13> 友军 </fontsize></b></color>
+        - "ㅤ友军ㅤ"
       - - overview
         - <color=0xFF66CCFF>✪ --- 友军：所有</color>
       - - tabColumnOrder
@@ -9499,9 +9482,11 @@ tabSetup:
     - - - bracket
         - ⌘ 图标：所有
       - - color
-        - null
+        - - 0.25
+          - 1.0
+          - 0.25
       - - name
-        - <color=0xFF66FF66><b><fontsize=13> 跃迁! </fontsize></b></color>
+        - "ㅤ跃迁!ㅤ"
       - - overview
         - <color=0xFF66FF66>➲ 额外：跑蛋（!）</color>
       - - tabColumnOrder
@@ -9523,9 +9508,11 @@ tabSetup:
     - - - bracket
         - ⌘ 图标：所有
       - - color
-        - null
+        - - 1.0
+          - 0.25
+          - 0.4375
       - - name
-        - <color=0xFFFF0000><b><fontsize=13> 特殊 </fontsize></b></color>
+        - "ㅤ特殊ㅤ"
       - - overview
         - <color=0xFFFF6666>✯ = 作战：小队战</color>
       - - tabColumnOrder
